--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "expo": "~51.0.11",
+    "expo-av": "~14.0.5",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-gesture-handler": "^2.16.2",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
-    "react-native-vector-icons": "^10.1.0",
-    "expo-av": "~14.0.5"
+    "react-native-sound": "^0.11.2",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
