--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-sound": "^0.11.2",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "expo-sensors": "~13.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
