--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/stack": "^6.3.29",
     "expo": "~51.0.11",
     "expo-av": "~14.0.5",
+    "expo-sensors": "~13.0.8",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.2",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-gesture-handler": "^2.16.2",
@@ -23,7 +25,8 @@
     "react-native-screens": "^3.31.1",
     "react-native-sound": "^0.11.2",
     "react-native-vector-icons": "^10.1.0",
-    "expo-sensors": "~13.0.8"
+    "react-native-webview": "^13.10.4",
+    "react-native-youtube-iframe": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
